edge/wildcard.disease.sh.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wildcard.disease.sh.ingress
  namespace: edge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts: 
      - www.disease.sh
      - 9kzzzfwgnwgef8dc.disease.sh
      - ev3klr6bchdcdowp.disease.sh
      - tvf5ksnujo01bafz.disease.sh
      secretName: wildcard.disease.sh
  rules:
    - host: www.disease.sh
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: edge
              servicePort: 7443
    - host: 9kzzzfwgnwgef8dc.disease.sh
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: edge
              servicePort: 7443
    - host: ev3klr6bchdcdowp.disease.sh
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: edge
              servicePort: 7443
    - host: tvf5ksnujo01bafz.disease.sh
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: edge
              servicePort: 7443
